--- a/main.html
+++ b/main.html
@@ -17,17 +17,14 @@
   <input type="url" id="portfolio" name="portfolio" required>
   
   <label for="favColor">Favorite Color:</label>
-  <select id="favColor" name="favColor">
-    <option value="red">Red</option>
-    <option value="green">Green</option>
-    <option value="blue">Blue</option>
-  </select>
+  <input type="color" id="favColor" name="favColor">
   
   <label for="likeness">How much do you like your favorite color?</label>
   <input type="range" id="likeness" name="likeness" min="1" max="100">
   
   <button type="submit">Submit</button>
 </form>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
